--- a/BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html
+++ b/BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html
@@ -2,22 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Berni Wrightson Master of the Macabre</title>
 </head>
 
 <body>
-<h2>Berni Wrightson Master of the Macabre</h2>
-<img src="BerniWrightsonMasterMacabre1.jpg"> 
-<img src="BerniWrightsonMasterMacabre2.jpg"> 
-<img src="BerniWrightsonMasterMacabre3.jpg"> 
-<img src="BerniWrightsonMasterMacabre4.jpg">
-<img src="BerniWrightsonMasterMacabre5.jpg"> <br>
-Series: 5 issue reprint mini series<br>
-Illustrator: Berni Wrightson<br>
-Writer: Berni Wrightson<br>
-Publisher: 1983 PC<br>
+<img src="BerniWrightsonMasterMacabre1.jpg"> <br>
+4 issues 1983 PC, 1 issue Eclipse 1984<br>
+Created by Berni Wrightson
 <p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BerniWrightsonMasterMacabre1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BerniWrightsonMasterMacabre2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BerniWrightsonMasterMacabre3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BerniWrightsonMasterMacabre4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BerniWrightsonMasterMacabre5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Issue #1<ul>
 <li>"The muck monster." Reprinted from Eerie #68. In a variation on the Frankenstein story, the monster gains his freedom in a very unusual way. 
 </li>
