--- a/BestWeCouldDo/BestWeCouldDo.html
+++ b/BestWeCouldDo/BestWeCouldDo.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h2>The Best We Could Do</h2>
 <img src="BestWeCouldDo.jpg"> <br>
 Creator: Thi Bui<br>
-Series: one-shot Graphic Novel<br>
-Publisher: 2017 Abrams<br>
+1 issue 2017 Abrams<br>
 <p>
 A genre with clunky names including autobiographical novel and visual memoir, the ever-growing library of comics designed to encapsulate real lives is bringing a wide range of important stories to entirely new audiences. 
 </p><p>
