--- a/Beyblade/Beyblade.html
+++ b/Beyblade/Beyblade.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Beyblade</h2>
 <img src="Beyblade.jpg"> <br>
-Series: 1999 Manga made over 4.6 billion (USD)<br>
-Publisher: TV Tokyo<br>
+1999 Manga by TV Tokyo (made over $4.6 billion)
 <p>
 Beyblade is a Japanese manga series written and illustrated by Takao Aoki to promote sales of spinning tops called "Beyblades." Originally serialized in CoroCoro Comic from September 1999 to July 2004, the individual chapters were collected and published in 14 tankōbon by Shogakukan. The series focuses on a group of kids who form teams with which they battle one another using Beyblades.
 </p><p>
