--- a/BigGuyRustyRobot/BigGuyRustyRobot.html
+++ b/BigGuyRustyRobot/BigGuyRustyRobot.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Big Guy and Rusty the Boy Robot</h2>
 <img src="BigGuyRustyRobot.jpg"> <br>
-Series: 2 issue mini series, 1 collection<br>
-Illustrator: Geof Darrow<br>
-Writer: Frank Miller<br>
-Publisher: 1995, 2015 Dark Horse<br>
+2 issues 1995, 1 collection in 2000 by Dark Horse<br>
+Illustrator: Geof Darrow, Writer: Frank Miller
 <p>
 A gargantuan monster is tearing apart downtown Tokyo and turning its fair citizens into a menagerie of grotesques! Can anyone stop the carnage? Can anyone save the city? Enter Rusty, the Boy Robot, Japan's biggest big gun! If he can't atomize the atomic monstrosity, nobody can! Or, rather, nobody in the Eastern hemisphere! 
 </p>
