--- a/BiggTime/BiggTime.html
+++ b/BiggTime/BiggTime.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Bigg Time</h2>
 <img src="BiggTime.jpg"> <br>
-Series: one-shot, Graphic Novel<br>
-Illustrator: Ty Templeton <br>
-Writer: Ty Templeton<br>
-Publisher: 2002 Vertigo (DC)<br>
+1 issue 2002 Vertigo (DC)<br>
+Illustrator: Ty Templeton, Writer: Ty Templeton
 <p>
 What do you do when your "guardian angel" just happens to hate you and is determined to ruin your life? That's what happens to Lester Bigg in BIGG TIME, an original graphic novel from VERTIGO. It's a hilarious dark comedy from the twisted mind of cartoonist Ty Templeton! 
 </p>
