--- a/BikerMiceMars/BikerMiceMars.html
+++ b/BikerMiceMars/BikerMiceMars.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Biker Mice from Mars</h2>
 <img src="BikerMiceMars.jpg"> <br>
-Series: 3 issue mini series cartoon adaptation<br>
-Illustrator: Rurick Tyler<br>
-Writer: Rick Ungar, Bob Forward<br>
-Publisher: 1993 Marvel<br>
+3 issue cartoon adaptation 1993 Marvel<br>
+Illustrator: Rurick Tyler, Writer: Rick Ungar, Bob Forward
 <p>
 Starring Throttle, Modo, Vinnie, Greasepit, and Lawrence Limburger. A trio of motorcycle-riding rodents battles aliens with designs on Earth. Based on the science fiction/action animated series created by Rick Ungar.
 </p>
