--- a/Billi99/Billi99.html
+++ b/Billi99/Billi99.html
@@ -7,15 +7,12 @@
 </head>
 
 <body>
-<h2>Billi 99</h2>
 <img src="Billi99.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Tim Sale<br>
-Writer: Sarah E. Byam<br>
-Publisher: 1991 Dark Horse<br>
+4 issues 1991 Dark Horse<br>
+Illustrator: Tim Sale, Writer: Sarah E. Byam
 <p>
 The year is 1999. After 20 years of government by advertising, America is in the throes of a second great depression. 19-year-old Billi Chadam chooses to take on a corrupt world with nothing more than an oversized caballero costume and a Toleado sword. Determined to crush her youthful resistance are no less than the Pentagon, the Mafia, the union and Eric Veyhunder - a corporate mogul who makes Genghis Kahn look like a kitten!
-
 </p>
+
 </body>
 </html>
