--- a/BillyKidOldTimey/BillyKidOldTimey.html
+++ b/BillyKidOldTimey/BillyKidOldTimey.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Billy the Kid's Old Timey Oddities</h2>
 <img src="BillyKidOldTimey.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Kyle Hotz<br>
-Writer: Eric Powell<br>
-Publisher: 2005Dark Horse<br>
+4 issues 2005 by Dark Horse<br>
+Illustrator: Kyle Hotz, Writer: Eric Powell
 <p>
 Billy the Kid having faked his own death is now free to roam America, and start a new life, unhindered by his past crimes and criminal record. Free, that is, until someone discovers his true identity. Fineas Spoule and his band of traveling sideshow performers blackmail the Kid into joining their troupe. These performers are the rarest breed of human oddities and deforms: an alligator man, a dog-face boy, a wild man, a miniature boy, a psychic, a tatooed woman, and Sproule, himself, also known as "The Human Spider." Billy begrudgingly agrees. 
 </p><p>
