--- a/BiteClub/BiteClub.html
+++ b/BiteClub/BiteClub.html
@@ -2,23 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Bite Club</title>
 </head>
 
 <body>
-<h2>Bite Club</h2>
-<img src="BiteClub1.jpg"> 
-<img src="BiteClub2.jpg"> 
-<img src="BiteClub3.jpg"> 
-<img src="BiteClub4.jpg"> 
-<img src="BiteClub5.jpg"> 
-<img src="BiteClub6.jpg"> <br>
-Series: 6 issue mini series<br>
+<img src="BiteClub1.jpg"> <br>
+6 issues 2004 Vertigo (DC)<br>
 Illustrator: David Hahn, Frank Quitely (cover)<br>
 Writer: Howard Chaykin, David Tischman<br>
-Publisher: 2004 Vertigo<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BiteClub1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BiteClub2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BiteClub3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BiteClub4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BiteClub5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BiteClub6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 A new miniseries by the writing team of Howard Chaykin &amp; David Tischman, artist David Hahn (Private Beach), and cover artist Frank Quitely (THE SANDMAN: ENDLESS NIGHTS) mixes vampire mythology with modern-day mafia action. 
 </p><p>
 When Eduardo Del Toro is brutally murdered, he leaves control of the cartel to his youngest son, Leto, Miami's first vampire priest who wants nothing to do with the family business. But the mob is in Leto's blood, and his conflict between "God" and "godfather" is the explosive backdrop for this hard-hitting tale. 
