--- a/BizarreAdventures/BizarreAdventures.html
+++ b/BizarreAdventures/BizarreAdventures.html
@@ -2,18 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Bizarre Adventures</title>
 </head>
 
 <body>
-<h2>Bizarre Adventures</h2>
 <img src="BizarreAdventures25.jpg"> <br>
-Series: 10 issues #25-34. From <a href="https://blzimg.github.io/MarvelPreview/MarvelPreview.html">Marvel Preview #1-24</a><br>
-Publisher: 1981 Marvel<br>
+10 issues #25-34 1981 Marvel<br>
 Cover: Paul Gulacy
 <p>
-Marvels 1970s prestige magazine Marvel Preview morphed into this early 80s effort to present cutting-edge material that did not have to meet the Comics Code.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BizarreAdventures34.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+Marvels 1970s prestige magazine Marvel Preview morphed into this early 80s effort to present cutting-edge material that did not have to meet the Comics Code. The numbering begins with <a href="https://blzimg.github.io/MarvelPreview/MarvelPreview.html">Marvel Preview #1-24</a>
 </p><p>
 Issue #1:<ul>
 <li>Lethal Ladies. The Black Widow in I Got the Yo-Yo... You Got the String., written by Ralph Macchio, with art by Paul Gulacy.</li>
