--- a/Black/Black.html
+++ b/Black/Black.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-<h2>Black</h2>
 <img src="Black.jpg"> <br>
 Writer: Kwanza Osajyefo<br>
 Illustrators: Tim Smith 3, Jamal Igle<br>
 Covers: Khary Randolph<br>
-Publisher: 2017 Black Mask Studio<br>
+1 issue 2017 Black Mask Studio<br>
 <p>
 Black Mask Studio has long been home to some daring and refreshing series, but this year one of its biggest has been Black, the initially Kickstarter-funded superhero series that imagined a world where only black people could manifest superpowers.
 </p><p>
