--- a/BlackBolt/BlackBolt.html
+++ b/BlackBolt/BlackBolt.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Black Bolt</h2>
 <img src="BlackBolt.jpg"> 
 <img src="BlackBoltPage.jpg"> <br>
-Writer: Saladin Ahmed<br>
-Illustrator:Christian James Ward<br>
-Series: 6 issue mini series and 1 collection<br>
-Publisher: 2017 Marvel<br>
+6 issues 1 collection 2017 Marvel<br>
+Writer: Saladin Ahmed, Illustrator:Christian James Ward
 <p>
 There is perhaps no book out this year that does a more fantastic job of humanizing and breathing new life into its central character than Saladin Ahmed and Christian James Ward’s Black Bolt. Though the Inhuman king has been a fixture of Marvel’s comics for decades, Black Bolt strips the monarch of his friends, family, power, and station in order to turn him into the most three-dimensional, relatable version of himself he’s been in recent memory. In Black Bolt, Blackagar Boltagon becomes a man—not in the sense that he is no longer Inhuman, but rather that we see him walking and living amongst the people in a way that grounds him.
 </p><p>
