--- a/BlackCross/BlackCross.html
+++ b/BlackCross/BlackCross.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Black Cross Special</h2>
 <img src="BlackCross.jpg"> <br>
-Series: one-shot<br>
-Illustrator: Chris Warner<br>
-Writer: Chris Warner<br>
-Publisher: 1988 Dark Horse<br>
+1 issue 1988 Dark Horse<br>
+Created by  Chris Warner
 <p>
 The return of one of Dark Horse's most requested characters! Join Conrad, the man branded by his own action as Black Cross, as he makes his way in a violent future. Reprinting the two stories from Dark Horse Presents #1 &amp; #3, with ten pages of new material, and a new cover painted by Chris Warner.
 </p>
