--- a/BlackGoliath/BlackGoliath.html
+++ b/BlackGoliath/BlackGoliath.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Black Goliath</h2>
 <img src="BlackGoliath.jpg"> <br>
-Series: on-going, 5 issues<br>
-Illustrator: George Tuska, Ron Wilson (cover)<br>
-Writer: Tony Isabella<br>
-Publisher: 1976 Marvel<br>
+5 issues 1976 Marvel<br>
+Illustrator: George Tuska, Ron Wilson (cover), Writer: Tony Isabella
 <p>
 Black Goliath establishes himself in Los Angeles, leading a research team for Stark Industries. As Black Goliath he investigates a series of radium robberies and finds Atom-Smasher and his gang.
 </p><p>
