--- a/BlackKnight/BlackKnight.html
+++ b/BlackKnight/BlackKnight.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>The Black Knight</h2>
 <img src="BlackKnight.jpg"> <br>
-Series: 5 issue mini series, 1 collection TPB<br>
+5 issues 1 collection TPB 2016 Marvel<br>
 Illustrator: Luca Pizzari, Ken Walker; Julian Totino Tedesco (cover)<br>
-Writer: Frank Tieri<br>
-Publisher: 2016 Marvel<br>
+Writer: Frank Tieri
 <p>
 What do you do when it's your destiny to be damned? For centuries, that's the grave question that has plagued each wielder of the Ebony Blade, and all of them ultimately succumbed to the sword's curse.
 </p><p>
