--- a/BlackWidow/BlackWidow.html
+++ b/BlackWidow/BlackWidow.html
@@ -2,22 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Black Widow</title>
 </head>
 
 <body>
-<h2>Black Widow</h2>
-<img src="BlackWidow1.jpg">
-<img src="BlackWidow2.jpg">
-<img src="BlackWidow3.jpg">
-<img src="BlackWidow4.jpg">
-<img src="BlackWidow5.jpg">
-<img src="BlackWidow6.jpg">
-<img src="BlackWidow7.jpg"> <br>
-Series: on-going, seven times!<br>
-Publisher: Marvel<br>
+<img src="BlackWidow1.jpg"> <br>
+4 issues 1999, 3 issues 2001, 8 issues 2010, 20 issues 2014-2015, 12 issues 2016-2017, 5 issues 2019 Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow7.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 1999 First Series:<ul>
 THE WARNING: The following analysis is for your eyes only and discusses the proposed elimination and replacement of Natasha Romanova, a.k.a. the Black Widow! 
 </p><p>
