--- a/kb.html
+++ b/kb.html
@@ -2205,7 +2205,7 @@ Creative Knowledgebase<br>
 <td>Bill &amp; Ted</td>
 <td>1986</td>
 <td>Orion</td>
-<td><a href="BillTedBogusJourney/BillTedBogusJourney.html">Details</a></td>
+<td><a href="BillTed/BillTed.html">Details</a></td>
 </tr>
 
 <tr>
