--- a/BillTed/BillTed.html
+++ b/BillTed/BillTed.html
@@ -2,34 +2,46 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Bill &amp; Ted</title>
 </head>
 
 <body>
 <img src="BillTedMovie.jpg"> <br>
-Series: 2 Movies, 13 Animated TV Episodes, 7 Live Action TV Episodes, 12 issue comic series<br>
-1989 Orion<br>
+2 Movies 1989 Orion. 13 Animated TV Episodes, 7 Live Action TV Episodes, 12 issue comic series
 <p>
-Bill &amp; Ted's Excellent Adventure is a 1989 American science fiction comedy film directed by Stephen Herek and written by Chris Matheson and Ed Solomon. It stars Alex Winter, Keanu Reeves, and George Carlin. The plot follows slackers Bill (Winter) and Ted (Reeves), who travel through time to assemble historical figures for their high school history presentation. Box office earned $40.5 Million.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BillTedMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BillTedBogusJourneyMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BillTedBogusJourney.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BillTedExcellentComic.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BillTedCereal.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
-<img src="BillTedBogusJourneyMovie.jpg">
+Bill &amp; Ted's Excellent Adventure is a 1989 American science fiction comedy film directed by Stephen Herek and written by Chris Matheson and Ed Solomon. It stars Alex Winter, Keanu Reeves, and George Carlin. The plot follows slackers Bill (Winter) and Ted (Reeves), who travel through time to assemble historical figures for their high school history presentation. Box office earned $40.5 Million.
 </p><p>
 Bill &amp; Ted's Bogus Journey is a  1991 American science fiction comedy film, and the directing debut of Pete Hewitt. It is the second film in the Bill &amp; Ted franchise, and a sequel to Bill &amp; Ted's Excellent Adventure (1989). Keanu Reeves, Alex Winter and George Carlin reprise their roles. The film's original working title was Bill &amp; Ted Go to Hell and the film's soundtrack featured the song "Go to Hell" by Megadeth, which Dave Mustaine wrote for the film. Despite mixed reviews from film critics, like its predecessor, the film has since gained a cult following. Box office earned $38 Million.
 </p><p>
  In addition to the films, the franchise has spawned both an animated television series (with Winter and Reeves reprising their roles) and a live-action television series in 1990 and 1992 respectively, video games, and comic books.
 </p><p>
-<img src="BillTedBogusJourney.jpg">
-</p><p>
 The color comic book adaptation of the bodacious film event starring none other than...ta daaa...Bill &amp; Ted! Everything's bogus when they're killed and replaced by robots!
-</p><p>
-<img src="BillTedExcellentComic.jpg">
 </p><p>
 Death Takes A Most Heinous Holiday. After Death quits and takes a holiday, zombies, with no place to go, show up at Bill &amp; Ted's door and it's up to the duo to retrieve Death and get him back on the job.
 </p><p>
-<img src="BillTedCereal.jpg">
-</p><p>
 Bill &amp; Ted's Excellent Cereal was a cereal based on the Bill &amp; Ted movies and cartoon of the late 1980s and early 1990s. It was promoted with the branding slogan "A Most Awesome Breakfast Adventure".
 </p>
+
 </body>
 </html>
