--- a/Bishop/Bishop.html
+++ b/Bishop/Bishop.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Bishop</h2>
 <img src="Bishop.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Carlos Pacheco<br>
-Writer: John Ostrander<br>
-Publisher: 1994 Marvel<br>
+4 issues 1994 Marvel<br>
+Illustrator: Carlos Pacheco, Writer: John Ostrander
 <p>
 From the X-Men story line, Bishop learns from Bantam that Mountjoy, a criminal from his own future time who is able to either possess or absorb his victims, is running loose in the present day; Bishop battles Mountjoy who has chosen Storm as his prey. 
 </p>
