--- a/BlackTerror/BlackTerror.html
+++ b/BlackTerror/BlackTerror.html
@@ -9,13 +9,8 @@
 <body>
 
 <img src="BlackTerror001.jpg"> <br>
-Series: 27 issues 1943 - 1949<br>
-Publisher: Nedor (Pines)<br>
+Series: 27 issues 1943-1949 by Nedor (Pines)<br>
 <p>
-The Black Terror is a fictional comic book superhero who originally appeared in Exciting Comics #9, published by Nedor Comics in January 1941. Some Black Terror stories were written by Patricia Highsmith before she became an acclaimed novelist. The character has been revived by various publishers over the years, including AC Comics, Eclipse Comics, America's Best Comics, and Dynamite Entertainment.
-</p><p>
-His secret identity was pharmacist Bob Benton, who formulated a chemical he called "formic ethers", which gave him various superpowers. He used these powers to fight crime with his sidekick, Tim Roland, together known as the "Terror Twins".
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -40,6 +35,12 @@ His secret identity was pharmacist Bob Benton, who formulated a chemical he call
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+
+</p><p>
+The Black Terror is a fictional comic book superhero who originally appeared in Exciting Comics #9, published by Nedor Comics in January 1941. Some Black Terror stories were written by Patricia Highsmith before she became an acclaimed novelist. The character has been revived by various publishers over the years, including AC Comics, Eclipse Comics, America's Best Comics, and Dynamite Entertainment.
+</p><p>
+His secret identity was pharmacist Bob Benton, who formulated a chemical he called "formic ethers", which gave him various superpowers. He used these powers to fight crime with his sidekick, Tim Roland, together known as the "Terror Twins".
 </p>
+
 </body>
 </html>
