--- a/Blacksad/Blacksad.html
+++ b/Blacksad/Blacksad.html
@@ -2,18 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Blacksad</title>
 </head>
 
 <body>
-<h2>Blacksad</h2>
 <img src="Blacksad.jpg"> <br>
-Series: <br>
+2 issues 2003, 1 TPB collection 2010, 1 issue 2012, issue 2014 Dark Horse<br>
 Illustrator: Juanjo Guarnido<br>
-Writer: Juan Díaz Canales<br>
-Publisher: 2010 Dark Horse<br>
+Writer: Juan Díaz Canales
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Blacksad.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Blacksad1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Blacksad2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Blacksad3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Blacksad4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Private investigator John Blacksad is up to his feline ears in mystery, digging into the backstories behind murders, child abductions, and nuclear secrets. 
 </p><p>
 Guarnido's sumptuously painted pages and rich cinematic style bring the world of 1950s America to vibrant life, with Canales weaving in fascinating tales of conspiracy, racial tension, and the "red scare" Communist witch hunts of the time. 
