--- a/Blackwulf/Blackwulf.html
+++ b/Blackwulf/Blackwulf.html
@@ -9,10 +9,10 @@
 <body>
 <h2>Blackwulf</h2>
 <img src="Blackwulf.jpg"> <br>
-Series: on-going, 10 issues<br>
+10 issues 1994 Marvel<br>
 Illustrator: Angel Medina<br>
 Writer: Glenn Herdling<br>
-Publisher: 1994 Marvel<br>
+
 <p>
 Where Monsters Dwell. <br>
 Lord Tantalus orders one of his sons to kidnap a geneticist, and the other son disguises himself to stop the kidnapping. Unfortunately, Pelops pays the ultimate price for betraying his father.
