--- a/Blaze/Blaze.html
+++ b/Blaze/Blaze.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-<h2>Blaze</h2>
 <img src="Blaze.jpg"> <br>
-Series: on-going, 12 issues<br>
+12 issues 1994 Marvel<br>
 Illustrator: Henry Martinez<br>
 Writer: Larry Hama<br>
-Publisher: 1994 Marvel<br>
+
 <p>
 A Cold Blast From Ice Box Bob!. Johnny Blaze battles the dead Ice Box Bob who has taken possession of the local storekeeper. Events of Johnny's life "told" in a tarot card reading.
 </p>
