--- a/BlazeTheWonderCollie/BlazeTheWonderCollie.html
+++ b/BlazeTheWonderCollie/BlazeTheWonderCollie.html
@@ -7,10 +7,9 @@
 </head>
 
 <body>
-<h2>Blaze, the Wonder Collie</h2>
 <img src="BlazeTheWonderCollie1.jpg">
 <img src="BlazeTheWonderCollie2.jpg"> <br>
-Publisher: 1949 Atlas (Marvel)<br>
+2 issues 1949-1950 Atlas (Marvel)<br>
 Other Appearances: Rex Hart #8
 <p>
 First issue of the series (possibly continued from Molly Manton's Romances). "Blaze, Son of Fury!" Back-up story, "Diablo, Ruler of the Rockies." Photo cover.
