--- a/BlondePhantom/BlondePhantom.html
+++ b/BlondePhantom/BlondePhantom.html
@@ -2,17 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Blonde Phantom</title>
 </head>
 
 <body>
-<h2>Blonde Phantom</h2>
 <img src="AllSelect11.jpg"> 
 <img src="BlondePhantom.jpg"> <br>
-Series: on-going<br>
-Publisher: 1946 Marvel<br>
+11 issues 1946-1949 Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlondePhantom11.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Blonde Phantom (Louise Grant Mason) first appeared in All Select Comics #11 (1946), which was popular enough for them to change the title to Blonde Phantom #12.
 </p><p>
 The creator of the Blonde Phantom is disputed. Don Markstein's Toonopedia says the character was created by Stan Lee and Syd Shores, but Al Sulman claimed to have created the character during his time at Timely Comics. Comics.org shows Bill Woolfolk as the writer adding "credit confirmed from Woolfolk's records." 
