--- a/Blink/Blink.html
+++ b/Blink/Blink.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Blink</h2>
 <img src="Blink.jpg"> <br>
-Series: 4 issue mini series<br>
+4 issues 2001 Marvel<br>
 Illustrator: Scott Lobdell, Adam Kubert (cover)<br>
 Writer: Trevor McCarthy<br>
-Publisher: 2001 Marvel<br>
 <p>
 Takes place in that hellish version of Earth known as the Age of Apocalypse. The star of this story? The young girl known as Blink! The teleporting mutant has only just recently joined Magneto's X-Men and finds that 1. being a rebel fighting insurmountable odds isn't easy; and 2. the team has too many rules! 
 </p><p>
