--- a/BloodATale/BloodATale.html
+++ b/BloodATale/BloodATale.html
@@ -7,13 +7,11 @@
 </head>
 
 <body>
-<h2>Blood A Tale</h2>
 <img src="BloodATale.jpg"> 
 <img src="BloodATaleDC.jpg"> <br>
-Series: 4 issue mini series<br>
+4 issues 1988 Epic (Marvel), re-released Vertigo (DC)<br>
 Illustrator: Kent Williams<br>
-Writer: J.M. DeMatteis<br>
-Publisher: 1988 Epic (Marvel), re-released 1996 Vertigo (DC)<br>
+Writer: J.M. DeMatteis
 <p>
 "Uroborous!" Close your blind eyes, what do you see? The sea turns to blood and the blood gave up its secrets!
 </p><p>
