--- a/Bloodseed/Bloodseed.html
+++ b/Bloodseed/Bloodseed.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Bloodseed</h2>
 <img src="Bloodseed.jpg"> <br>
-Series: two issue mini series<br>
+2 issues 1993 Marvel<br>
 Illustrator: Liam Sharp, Cam Smith<br>
-Writer: Paul Neary<br>
-Publisher: 1993 Marvel<br>
+Writer: Paul Neary
 <p>
 This offering from Marvel UK's Frontier line features a cover enhanced with gold ink. Bloodseed is programmed to deliver a genetic communication housed in his body. To do it, he'll have to fight his way through a savage land populated with every kind of deviant known to humanity.
 </p>
