--- a/Bloodstone/Bloodstone.html
+++ b/Bloodstone/Bloodstone.html
@@ -2,18 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Bloodstone</title>
 </head>
 
 <body>
-<h2>Bloodstone</h2>
-<img src="Bloodstone.jpg"> <br>
-Series: 4 issue mini series<br>
+<img src="Bloodstone1.jpg"> <br>
+4 issues 2001 Marvel<br>
 Illustrator: Michael Lopez, Dan Abnett<br>
-Writer: Michael Lopez, Andy Lanning<br>
-Publisher: 2001 Marvel<br>
+Writer: Michael Lopez, Andy Lanning
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Bloodstone1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bloodstone2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bloodstone3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bloodstone4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Dracula strikes the new Bloodstone! Elsa Bloodstone has inherited her father's powers, but will she follow in his footsteps and wind up dead, as well?! The brand new Bloodstone meets up with one of her father's greatest enemies, the deadly Dracula! Will she be able to survive her first big test as the second-generation monster hunter? Or will Dracula put an end to her before she even gets a chance to prove herself? And what's she going to do if her mom finds out what she's been doing all night?
 </p>
 </body>
