--- a/BlueBolt/BlueBolt.html
+++ b/BlueBolt/BlueBolt.html
@@ -9,19 +9,10 @@
 
 <body>
 <img src="BlueBolt001.jpg"> <br>
-Series: 101 issues 1940 to 1949<br>
-Publisher: Novelty Press<br>
-Created and written by Joe Simon<br>
-Illustrations by Jack Kirby<br>
+Series: 101 issues 1940 to 1949 by Novelty Press<br>
+Written by Joe Simon, Illustrations by Jack Kirby<br>
 <p>
-After being struck by lightning twice and being healed via an experimental treatment, Fred Parrish gained the ability to project lightning bolts. He also possessed a lightning gun which could shoot lightning bolts.
-</p><p>
-Initially published by Novelty Press, Blue Bolt Comics, one of the earliest comic books titled after a single character, ran 101 issues, cover-dated June 1940 to August 1951. Its namesake hero was created by writer-artist Joe Simon for Funnies Inc., one of the earliest comic-book "packagers" that produced outsourced comics on demand for publishers entering the fledgling medium. By the second issue, Simon had enlisted Jack Kirby as the series co-writer/artist, starting the first pairing of the future comic book legends who shortly thereafter created Captain America and other characters. 
-</p><p>
-The two teamed for fewer than 12 issues, turning over the book to successors including Dan Barry, Tom Gill and Mickey Spillane, before his creation of the detective character Mike Hammer in novels. As the popularity of superheroes began to fade in the post-World War II era, Blue Bolt was transformed from a superhero into a plainclothes type of hero.
-</p><p>
-In 1949, Novelty Press sold its assets, including Blue Bolt, to series cover artist L. B. Cole due to the growing criticism over violence in comic books. Using his new assets, Cole began his own company, Star Publications. By 1951, Blue Bolt Comics' name had been changed to Blue Bolt Weird Tales of Terror and featured the type of horror covers epitomized by EC Comics. A couple of issues after the name change, the Blue Bolt was dropped in favor of horror stories. With issue #120 (published in 1953) the title was changed to Ghostly Weird Stories.
-</p><p>
+
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -42,10 +33,27 @@ In 1949, Novelty Press sold its assets, including Blue Bolt, to series cover art
 <div class="mySlides" style="text-align: center;"><img src="BlueBolt010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlueBolt011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlueBolt012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlueBolt020.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+
+</p><p>
+After being struck by lightning twice and being healed via an experimental treatment, Fred Parrish gained the ability to project lightning bolts. He also possessed a lightning gun which could shoot lightning bolts.
+</p><p>
+Initially published by Novelty Press, Blue Bolt Comics, one of the earliest comic books titled after a single character, ran 101 issues, cover-dated June 1940 to August 1951. Its namesake hero was created by writer-artist Joe Simon for Funnies Inc., one of the earliest comic-book "packagers" that produced outsourced comics on demand for publishers entering the fledgling medium. By the second issue, Simon had enlisted Jack Kirby as the series co-writer/artist, starting the first pairing of the future comic book legends who shortly thereafter created Captain America and other characters. 
+</p><p>
+The two teamed for fewer than 12 issues, turning over the book to successors including Dan Barry, Tom Gill and Mickey Spillane, before his creation of the detective character Mike Hammer in novels. As the popularity of superheroes began to fade in the post-World War II era, Blue Bolt was transformed from a superhero into a plainclothes type of hero.
+</p><p>
+In 1949, Novelty Press sold its assets, including Blue Bolt, to series cover artist L. B. Cole due to the growing criticism over violence in comic books. Using his new assets, Cole began his own company, Star Publications. By 1951, Blue Bolt Comics' name had been changed to Blue Bolt Weird Tales of Terror and featured the type of horror covers epitomized by EC Comics. A couple of issues after the name change, the Blue Bolt was dropped in favor of horror stories. With issue #120 (published in 1953) the title was changed to Ghostly Weird Stories.
 </p>
 </body>
 </html>
